# Trabalhos_GCS

./: README.md
GCS/: README.md
GCS02/Testefinal/: Vagrantfile
GCS02/Testefinal/.vagrant/machines/db/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
GCS02/Testefinal/.vagrant/machines/web/virtualbox/: action_provision  action_set_name  id  index_uuid
GCS02/teste/.vagrant/machines/db/virtualbox/: action_provision  action_set_name  id  index_uuid
GCS02/teste/.vagrant/machines/web/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
GCS02/versao 1/: Vagrantfile
GCS03/: Dockerfile  docker-compose.yml
GCS04/: hosts  playbook.yml
GCS04/.vagrant/provisioners/ansible/inventory/: vagrant_ansible_inventory
GCS04/djangobasico/: settings.py
GCS05/: CMakeLists.txt
GCS06/project/: gulpfile.js  package-lock.json  package.json
GCS06/project/app/: index.html
GCS07/150038267/: 150038367.txt  main.cpp
GCS07/teste1/hellogcs/: MakeFile
